# burn_depth

./: .gitattributes  .gitignore  Cargo.toml  README.md  index.html
.cargo/: config.toml
.github/workflows/: build.yml  deploy-pages.yml  test.yml
bench/: inference.rs  interpolate.rs
crates/bevy_burn_depth/: Cargo.toml
crates/bevy_burn_depth/src/: lib.rs  main.rs
example/: common.rs  correctness.rs  da3_small_correctness.rs  da3_wgpu_loader.rs  inference.rs
src/: backend.rs  inference.rs  lib.rs
src/layers/: mod.rs
src/model/: depth_pro.rs  mod.rs
src/model/depth_anything3/: camera.rs  dpt.rs  interpolate.rs  mod.rs
src/model/depth_pro/: interpolate.rs  mod.rs
src/model/depth_pro/layers/: decoder.rs  encoder.rs  fov.rs  vit.rs
src/model/dino/: mod.rs
src/model/dino/layers/: attention.rs  block.rs  layer_norm.rs  layer_scale.rs  mlp.rs  patch_embed.rs
tool/: benchmark.rs  correctness.py  correctness_da3.py  correctness_depth_pro.py  import.rs  import_da3.rs  standard.py
