[package]
name = "burn_depth_pro"
description = "burn depth pro model inference"
version = "0.1.0"
edition = "2024"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT OR Apache-2.0"
keywords = [
  "burn",
  "dino",
  "vit",
]
categories = [
  "computer-vision",
]
homepage = "https://github.com/mosure/burn_depth_pro"
repository = "https://github.com/mosure/burn_depth_pro"
readme = "README.md"
exclude = [
  ".devcontainer",
  ".github",
  "docs",
  "dist",
  "build",
  "assets",
  "credits",
]


[features]
default = []

benchmark = ["burn/autotune", "burn/fusion"]
import = ["bevy_args", "burn-import", "burn-store", "clap", "serde"]
test_wgpu_f16 = []
test_cuda = []


[dependencies]
# burn-import = { version = "0.17", features = ["pytorch"], optional = true }
burn-import = { version = "0.19", features = ["pytorch"], optional = true }
burn-ndarray = "0.19"
burn-store = { version = "0.19", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
serde = { version = "1.0", optional = true }
serde_json = "1.0"
half = "2"
wgpu = "26.0"


[dependencies.bevy_args]
version = "2.0"
default-features = false
optional = true


[dependencies.burn]
version = "0.19"
default-features = true
features = [
  # "autotune",
  "fusion",
  "ndarray",
  "std",
  # "vulkan",
  # "webgpu",
  "wgpu",
]

[dependencies.burn-wgpu]
version = "0.19"
default-features = true
features = [
  "fusion",
  "std",
  # "template",
]

[dependencies.cubecl]
version = "0.8"
default-features = true
features = [
  # "autotune-checks",
  # "linalg",
  "std",
  # "template",
  # "wgpu",
  # "wgpu-spirv",
]

[dependencies.cubecl-runtime]
version = "0.8"
default-features = true
features = [
  # "autotune-checks",
  # "channel-cell",
  "channel-mpsc",
  # "channel-mutex",
  "std",
  # "storage-bytes",
]


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"


[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Location',
  'Node',
  'Window',
]


[dev-dependencies]
burn-cuda = { version = "0.19", features = ["fusion"] }
criterion = { version = "0.7", features = ["html_reports"] }
futures-intrusive = { version = "0.5.0" }
image = { version = "0.25", default-features = false, features = ["png"] }
pollster = { version = "0.4.0" }
safetensors = "0.6"

[patch.crates-io]
cudarc = { git = "https://github.com/coreylowman/cudarc", tag = "v0.17.3" }


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.wasm-release]
strip = "symbols"
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"


[lib]
path = "src/lib.rs"


[[example]]
name = "inference"
path = "example/inference.rs"


[[bench]]
name = "inference_benchmark"
path = "tool/benchmark.rs"
harness = false

[[bin]]
name = "import"
path = "tool/import.rs"
required-features = ["import"]
