[package]
name = "burn_depth"
description = "burn depth pro model inference"
version = "0.2.0"
edition = "2024"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT OR Apache-2.0"
keywords = [
  "burn",
  "dino",
  "vit",
]
categories = [
  "computer-vision",
]
homepage = "https://github.com/mosure/burn_depth"
repository = "https://github.com/mosure/burn_depth"
readme = "README.md"
exclude = [
  ".devcontainer",
  ".github",
  "docs",
  "dist",
  "build",
  "assets",
  "credits",
]

[workspace]
members = [
  "crates/bevy_burn_depth",
]
resolver = "2"


[features]
default = [
  "backend_fusion",
  # "backend_cpu",

  "backend_cuda",

  # "backend_ndarray",
]

import = [
  "backend_ndarray",
  "burn-import",
  "burn-store",
  "clap",
  "safetensors",
  "serde",
  "serde_json",
]

# note: one-hot requirement
backend_cpu = ["burn/cpu", "burn_dino/backend_cpu"]
backend_cuda = ["burn/cuda", "burn_dino/backend_cuda"]
backend_fusion = ["burn/fusion"]
backend_ndarray = ["burn/ndarray", "burn_dino/backend_ndarray"]
backend_wgpu = ["burn/wgpu", "burn_dino/backend_wgpu", "half"]


[dependencies]
burn = "0.19"
burn_dino = { version = "0.5.2", default-features = false }

half = { version = "2", optional = true }

burn-import = { version = "0.19", features = ["pytorch"], optional = true }
burn-store = { version = "0.19", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
safetensors = { version = "0.6", optional = true }


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"


[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Location',
  'Node',
  'Window',
]


[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
futures-intrusive = { version = "0.5.0" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
pollster = { version = "0.4.0" }
safetensors = "0.6"
wgpu = "26.0"


[patch.crates-io]
cudarc = { git = "https://github.com/coreylowman/cudarc", tag = "v0.17.3" }


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.wasm-release]
strip = "symbols"
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"


[lib]
path = "src/lib.rs"


[[example]]
name = "inference"
path = "example/inference.rs"

[[example]]
name = "correctness"
path = "example/correctness.rs"


[[bench]]
name = "inference_benchmark"
path = "bench/inference.rs"
harness = false


[[bench]]
name = "interpolate_benchmark"
path = "bench/interpolate.rs"
harness = false


[[bin]]
name = "import"
path = "tool/import.rs"
required-features = ["import"]
